fix jump in scroll template

--- a/editor/sass/screen.scss
+++ b/editor/sass/screen.scss
@@ -119,7 +119,7 @@ body{
     }
 
     > li {
-      width: 262px;
+      width: 390px;
       height: 227px;
       color: #444;
       background: #fff;
@@ -189,7 +189,7 @@ body{
   }
 
 	div.header {
-    background: rgb(255, 115, 115) image-url("greyBarBkg.png") repeat-y left top;
+    background: rgb(255, 115, 115);
 	  color: white;
 	  line-height: 1em;
 	  margin: 0;
